hphp/test/slow/hhbbc/magic_call_006.php.expectf
a

Fatal error: Call to protected method Asd::heh from anonymous context in %s/slow/hhbbc/magic_call_006.php on line 18
